[project]
name = "py-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.2.3",
    "langgraph>=0.2.38",
    "python-dotenv>=1.0.1",
]
authors = [
    { name = "Abdullah Siddique", email = "44811336+siddicky@users.noreply.github.com" },
]
license = { text = "MIT" }


[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent/open-canvas", "src/agent/reflection"]



[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
